test/sema/generics/generic_function_inference_multiple_params_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S<T> { x: T }

fn wrapper<T, U>(x: T, y: T, z: U): unit {}

fn main(): unit {
  // CHECK: [[# @LINE + 1 ]]:23: error: expected 'S<number>' argument, but received 'S<S<number>>'
  wrapper(S{ x: 1 }, S{ x: S{ x: 1 } }, main);
}

// CHECK-NOT: {{.*error.*}}
